# api/v1/models/endpoint_datapath_configuration.go
@@ -24,6 +24,10 @@ type EndpointDatapathConfiguration struct {
 	//
 	DisableSipVerification bool `json:"disable-sip-verification,omitempty"`
 
+	// Enables multicast traffic for Endpoint.
+	//
+	EnableMulticast bool `json:"enable-multicast,omitempty"`
+
 	// Indicates that IPAM is done external to Cilium. This will prevent the IP from being released and re-allocation of the IP address is skipped on restore.
 	//
 	ExternalIpam bool `json:"external-ipam,omitempty"`
